# serializer version: 1
# name: test_entities[switch.openevse_mock_config_current_shaper-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.openevse_mock_config_current_shaper',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current shaper',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current shaper',
    'platform': 'openevse',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_shaper',
    'unique_id': 'deadbeeffeed-current_shaper',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.openevse_mock_config_current_shaper-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'openevse_mock_config Current shaper',
    }),
    'context': <ANY>,
    'entity_id': 'switch.openevse_mock_config_current_shaper',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch.openevse_mock_config_manual_override-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.openevse_mock_config_manual_override',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Manual override',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Manual override',
    'platform': 'openevse',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'manual_override',
    'unique_id': 'deadbeeffeed-manual_override',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.openevse_mock_config_manual_override-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'openevse_mock_config Manual override',
    }),
    'context': <ANY>,
    'entity_id': 'switch.openevse_mock_config_manual_override',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch.openevse_mock_config_solar_pv_divert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.openevse_mock_config_solar_pv_divert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Solar PV divert',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Solar PV divert',
    'platform': 'openevse',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'solar_pv_divert',
    'unique_id': 'deadbeeffeed-solar_pv_divert',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.openevse_mock_config_solar_pv_divert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'openevse_mock_config Solar PV divert',
    }),
    'context': <ANY>,
    'entity_id': 'switch.openevse_mock_config_solar_pv_divert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
